# Bosch-Smart-Home-Camera-Tool-MCP

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: publish-pypi.yml  test.yml
docs/: architecture.md  release-process.md
src/bosch_camera_mcp/: __init__.py  errors.py  lan_rcp.py  maintenance.py  prompts.py  resources.py  server.py
src/bosch_camera_mcp/adapters/: __init__.py  cli_bridge.py
tests/: test_audio_intrusion_wifi.py  test_cert_pinning.py  test_cred_rotation.py  test_lan_ping.py  test_lan_rcp_https.py  test_maintenance.py  test_mcp_bug_fixes_2026_05_24.py  test_mcp_features_2026_05_25.py  test_packaging.py  test_pan_presets.py  test_prompts.py  test_resources.py  test_skeleton.py  test_tools_integration.py  test_transport.py  test_v160_features.py
